--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,25 @@
-# Core FastAPI Framework
+# Core Framework (4)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.0.3
 
-# Database & ORM
+# Database (3)
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 alembic==1.12.1
 
-# HTTP Client & WebSockets
+# Network & SSH (2)
 httpx==0.25.2
-websockets==12.0
-
-# File handling & multipart
-python-multipart==0.0.6
-aiofiles==23.2.1
-
-# Security & Authentication
-cryptography>=41.0.0,<46.0.0
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
-
-# Configuration & Environment
-python-dotenv==1.0.0
-
-# SSH Connectivity (NEW)
 asyncssh==2.14.2
 
-# Development & Testing
+# Security (2)
+cryptography>=41.0.0,<46.0.0
+python-dotenv==1.0.0
+
+# Development (5)
 pytest==7.4.3
 pytest-asyncio==0.21.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
-
-# Optional: For better async performance
-uvloop==0.19.0; sys_platform != "win32"
