--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,13 @@ asyncssh==2.14.2
 cryptography>=41.0.0,<46.0.0
 python-dotenv==1.0.0
 
-# Development (5)
+# Development (9)
 pytest==7.4.3
 pytest-asyncio==0.21.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
+mypy>=1.0.0
+types-sqlalchemy>=1.4.0
+pre-commit>=3.0.0
+bandit>=1.7.0
