--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.0.3
 
-# Database (3)
-sqlalchemy==2.0.23
+# Database (3) - Updated versions for better type support
+sqlalchemy[mypy]==2.0.23
 aiosqlite==0.19.0
 alembic==1.12.1
 
@@ -17,13 +17,13 @@ asyncssh==2.14.2
 cryptography>=41.0.0,<46.0.0
 python-dotenv==1.0.0
 
-# Development (9)
+# Development (9) - Updated mypy version
 pytest==7.4.3
 pytest-asyncio==0.21.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
-mypy>=1.0.0
-types-sqlalchemy>=1.4.0
+mypy>=1.7.0
+types-sqlalchemy>=1.4.53
 pre-commit>=3.0.0
 bandit>=1.7.0
