--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.0.3
 
-# Database (3) - Updated versions for better type support
-sqlalchemy[mypy]==2.0.23
+# Database (4) - Updated for async support
+sqlalchemy[asyncio]==2.0.23
 aiosqlite==0.19.0
 alembic==1.12.1
+greenlet>=2.0.2,<4.0.0  # Fixes greenlet warnings and async support
 
 # Network & SSH (2)
 httpx==0.25.2
@@ -17,15 +18,29 @@ asyncssh==2.14.2
 cryptography>=41.0.0,<46.0.0
 python-dotenv==1.0.0
 
-# Development (9) - Updated mypy version
+# AI Integration (1)
+ollama==0.1.2  # For Ollama API integration (correct package name)
+
+# Development & Testing (13) - Enhanced testing support
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
 pytest-cov==4.1.0
+pytest-xdist==3.3.1  # For parallel test execution
+pytest-timeout==2.2.0  # For test timeouts
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
-mypy>=1.7.0
-types-sqlalchemy>=1.4.53
+mypy>=1.0.0
+types-sqlalchemy>=1.4.0
 pre-commit>=3.0.0
 bandit>=1.7.0
+
+# Runtime Dependencies (3) - Additional runtime support
+typing-extensions>=4.8.0  # For enhanced type hints
+anyio>=3.7.1,<5.0.0  # Async I/O library compatibility
+sniffio>=1.3.0  # Async library detection
+
+# Optional Production Dependencies (2)
+gunicorn>=21.2.0  # WSGI server for production
+psutil>=5.9.0  # System monitoring capabilities
