Update .gitignore to exclude database files and remove tracked nexus.db
- Added *.db, *.db-journal, *.db-wal, *.db-shm patterns to .gitignore
- Removed backend/data/nexus.db from Git tracking
- Database files should not be version controlled as they contain runtime data

--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,11 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Project-specific database
-data/nexus.db
+# Database files
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
 
 # Flask stuff:
 instance/
